# seniority-pipeline

./: .gitignore  ASSIGNMENT.md  README.md  mypy.ini  pyproject.toml  ruff.toml
src/: config.py  jobs.py  seniority_pb2.py  seniority_pb2.pyi  seniority_pb2_grpc.py  transfer.py
src/protobufs/: seniority.proto
src/seniority/: __init__.py  client.py  sample_generator.py  server.py
