[project]
name = "seniority"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.66.1,<1.67",
    "grpcio-tools>=1.66.1,<1.67",
    "protobuf>=5.27.2,<5.28.0",
]

[project.scripts]
main = "seniority:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.6",
]
